# treehacks

./: .gitignore  README.md  SETUP.md  pyproject.toml  setup.sh  spec.md
backend/: .env.example  pyproject.toml  server.py  test.py  test.webm
backend/analysis/: __init__.py  ai_summary.py  transcript_analyzer.py
backend/claude-agent/: .env.example  agent.py  pyproject.toml  seed_db.py  setup_mcps.sh
backend/companionship/: controller.py
backend/preventative_care/: bad_message.txt  good_message.txt  preventative_care.py
backend/vercel-agent/: .env.example  TEST_PROMPTS.md  VERCEL_DEPLOY.md  package-lock.json  package.json  tsconfig.json  vercel.json
backend/vercel-agent/api/tools/: run.ts
backend/vercel-agent/src/: agent.ts  chat.ts  db.ts  index.ts  seed.ts  test-ride.ts  toolRunner.ts  uber-login.ts  uber-prices.ts
backend/vercel-agent/src/tools/: appointments.ts  bills.ts  contacts.ts  email.ts  grocery.ts  index.ts  medication.ts  remoteTools.ts  rides.ts  weather.ts
backend/whoop/: .env.example  controller.py  service.py  whoop_test.py
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
local/companionship_beeper_sync/: .env.example  README.md  beeper_client.py  main.py  pyproject.toml
mobile/: .env.example  App.tsx  README.md  app.json  package-lock.json  package.json
mobile/src/: config.ts  env.d.ts
workflows/tree-hacks-backend/: package-lock.json  package.json  preventative_care.js  preventative_care.ts
workflows_service/: .env.example  .gitignore  DEPLOY.md  nitro.config.ts  package-lock.json  package.json  vercel.json
(+32 files in other folders)
