[project]
name = "treehacks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.79.0",
    "boto3>=1.35.0",
    "elevenlabs>=2.35.0",
    "fastapi>=0.129.0",
    "keyboard>=0.13.5",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
    "uvicorn>=0.40.0",
]
